--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>This is a new project.
     </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis doloremque error beatae voluptate, recusandae deleniti atque, obcaecati ea accusamus asperiores odit nihil repellat facere sequi modi sit non et! Ab!
+    </p>
 </body>
 </html>
