created css file and image folder

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>This is a new project.
+    <h1>This is a new home page.
     </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis doloremque error beatae voluptate, recusandae deleniti atque, obcaecati ea accusamus asperiores odit nihil repellat facere sequi modi sit non et! Ab!
     </p>
+    <img src="./images/My Document.JPG" alt="purple lines and dots">
 </body>
 </html>
