--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,14 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>This is a new home page.
     </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis doloremque error beatae voluptate, recusandae deleniti atque, obcaecati ea accusamus asperiores odit nihil repellat facere sequi modi sit non et! Ab!
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis doloremque error beatae voluptate, recusandae
+        deleniti atque, obcaecati ea accusamus asperiores odit nihil repellat facere sequi modi sit non et! Ab!
     </p>
     <img src="./images/My Document.JPG" alt="purple lines and dots">
 </body>
+
 </html>
