--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-
+<div class="wrapper">
 <body>
     <h1>This is a new home page.
     </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis doloremque error beatae voluptate, recusandae
         deleniti atque, obcaecati ea accusamus asperiores odit nihil repellat facere sequi modi sit non et! Ab!
     </p>
-    <img src="./images/My Document.JPG" alt="purple lines and dots">
+    <img src="./images/IMG_0061.jpg" alt="purple pinstripe fountain pen with off-white accents and gold details, resting on dot grid notebook.">
 </body>
 
 </html>
