--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Purple's Pens</title>
 </head>
 <div class="wrapper">
-<body>
-    <h1>This is a new home page.
-    </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis doloremque error beatae voluptate, recusandae
-        deleniti atque, obcaecati ea accusamus asperiores odit nihil repellat facere sequi modi sit non et! Ab!
-    </p>
-    <img src="./images/IMG_0061.jpg" alt="purple pinstripe fountain pen with off-white accents and gold details, resting on dot grid notebook.">
-</body>
+    <header>
+      <h1>Purple's Pens</h1>
+      </header>
+    <body>
+        <h2><b>Pelikan M600</b></h2>
+        <img 
+            src="images/IMG_0061.jpg" 
+            alt="purple pinstripe fountain pen with off-white accents and gold details, resting on dot grid notebook."
+            class=img1>
+    </body>
 
 </html>
